--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Mehroz456.github.io/static_commerce_web",
+  "homepage": "http://Mehroz456.github.io/static_commerce_webpage",
   "name": "personal-portfolio",
   "version": "0.1.0",
   "private": true,
